setting layout pointing

--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -24,5 +24,15 @@ $border-radius-base: 3px;
   @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
 }
 
+.mg-t-sm{ margin-top: 5px;}
+.mg-t-lg{ margin-top: 10px;}
 
+.mg-l-sm{ margin-left: 5px;}
+.mg-l-lg{ margin-left: 10px;}
+
+.mg-r-sm{ margin-right: 5px;}
+.mg-r-lg{ margin-right: 10px;}
+
+.mg-r-sm{ margin-bottom: 5px;}
+.mg-r-lg{ margin-bottom: 10px;}
 
